--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +32,7 @@
     </section>
 
     <section class="about">
-        <img src="profile.jpg" alt="Profile Picture">
+        <img src="images/profile.jpg" alt="Profile Picture">
         <div class="about-text">
             <h2>HELLO,</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias tempore harum, aut nobis expedita quidem, rerum quisquam veritatis sit soluta, saepe laborum aliquid repellat. Dicta, hic. Temporibus voluptate velit ut!</p>
@@ -75,23 +74,23 @@
     <section class="portfolio">
         <h2>Our Portfolio</h2>
         <div class="portfolio-item">
-            <img src="project1.jpg" alt="Project 1">
+            <img src="images/1.jpg" alt="Project 1">
         </div>
         <div class="portfolio-item">
-            <img src="project2.jpg" alt="Project 2">
+            <img src="images/2.jpg" alt="Project 2">
         </div>
         <div class="portfolio-item">
-            <img src="project3.jpg" alt="Project 3">
+            <img src="images/3.jpg" alt="Project 3">
         </div>
         <div class="portfolio-item">
-            <img src="project4.jpg" alt="Project 4">
+            <img src="images/5.jpg" alt="Project 4">
         </div>
     </section>
 
     <section class="clients">
         <h2>Client's Feedback</h2>
         <div class="client-feedback">
-            <img src="client1.jpg" alt="Client 1">
+            <img src="images/client.jpg" alt="Client 1">
             <h3>Alex Ander</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias tempore harum, aut nobis expedita quidem.</p>
             <p class="rating">★★★★☆</p>
@@ -101,19 +100,19 @@
     <section class="blog">
         <h2>Our Blog</h2>
         <div class="blog-post">
-            <img src="blog1.jpg" alt="Blog 1">
+            <img src="images/blog1.jpg" alt="Blog 1">
             <h3>Web Design Blog Post</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <button class="button">Learn More</button>
         </div>
         <div class="blog-post">
-            <img src="blog2.jpg" alt="Blog 2">
+            <iframe class="responsive-iframe w-100" src="https://www.youtube.com/embed/uVju5--RqtY" title="YouTube video player"></iframe>
             <h3>Development Blog Post</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <button class="button">Learn More</button>
         </div>
         <div class="blog-post">
-            <img src="blog3.jpg" alt="Blog 3">
+            <img src="images/blog3.jpg" alt="Blog 3">
             <h3>Full Width Blog Post</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             <button class="button">Learn More</button>
